// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login should display an error on unsuccessful login 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <styled.h1>
    Operate
  </styled.h1>
  <styled.span
    data-test-id="error-span"
  >
    Username and Password do not match
  </styled.span>
  <Styled(Input)
    name="username"
    onChange={[Function]}
    placeholder="Username"
    required={true}
    type="text"
    value=""
  />
  <Styled(Input)
    name="password"
    onChange={[Function]}
    placeholder="Password"
    required={true}
    type="password"
    value=""
  />
  <Styled(Input)
    placeholder="Password"
    type="submit"
  />
</styled.form>
`;

exports[`Login should redirect to home page on successful login 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`Login should render login form by default 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <styled.h1>
    Operate
  </styled.h1>
  <Styled(Input)
    name="username"
    onChange={[Function]}
    placeholder="Username"
    required={true}
    type="text"
    value=""
  />
  <Styled(Input)
    name="password"
    onChange={[Function]}
    placeholder="Password"
    required={true}
    type="password"
    value=""
  />
  <Styled(Input)
    placeholder="Password"
    type="submit"
  />
</styled.form>
`;
